fix on mobile

--- a/css/ajh.css
+++ b/css/ajh.css
@@ -210,6 +210,9 @@ footer li {
  form.headbar-form {
    text-align: center;
  }
+ .separate-on-mobile {
+	 margin-top: .25rem!important;
+ }
 
 }
 
